--- a/public/app.css
+++ b/public/app.css
@@ -1,3 +1,4 @@
+/* Root variables */
 :root {
   --quarto-blue: #3a78b1;
   --spinner-size: 5rem;
@@ -6,10 +7,12 @@
   --screenshot-height: calc(9 * 21rem / 16);
 }
 
+/* Body */
 body {
   font-family: "Lucida Grande", sans-serif;
 }
 
+/* Loading Spinner */
 #loading-spinner {
   position: absolute;
   top: 50%;
@@ -36,6 +39,11 @@ body {
   }
 }
 
+#application {
+  display: none;
+}
+
+/* Header & Action Bar */
 #header {
   background: var(--quarto-blue);
   height: 4rem;
@@ -83,13 +91,15 @@ img#quarto-pub-logo-icon {
   font-size: 1.125rem;
 }
 
-#arc {
+/* Bottom Arc */
+#bottom-arc {
   margin-top: -1.25rem;
   width: 100%;
   height: 0.625rem;
   background: var(--quarto-blue);
 }
 
+/* Options */
 #options-container {
   position: fixed;
   top: 4rem;
@@ -168,7 +178,8 @@ img#quarto-pub-logo-icon {
   margin-left: 1.5rem;
 }
 
-#grid-sites-container {
+/* Sites Grid */
+#sites-grid-container {
   overflow-y: scroll;
   position: fixed;
   top: 7.25rem;
@@ -180,41 +191,55 @@ img#quarto-pub-logo-icon {
   bottom: 0;
 }
 
-#grid-sites {
+#sites-grid {
   display: grid;
   column-gap: var(--site-column-gap);
 }
 
-.site {
+.site-grid-entry {
   width: var(--site-width);
   margin-bottom: 1.75rem;
 }
 
-.site-screenshot {
+.site-grid-entry-screenshot {
   border: calc(0.125rem / 2) solid #ddd;
   width: var(--site-width);
   height: var(--screenshot-height);
   box-shadow: 2px 2px 19px -15px #000000;
 }
 
-.site-info {
+.site-grid-entry-info {
   margin-top: -0.25rem;
   color: var(--quarto-blue);
   font-size: 0.85rem;
 }
 
-.site-updated {
+.site-grid-entry-updated {
   color: #000;
   color: #777;
   font-size: 0.75rem;
   margin-top: -0.2rem;
 }
 
-span.site-updated-time {
+span.site-grid-entry-updated-time {
   color: #777;
-  /* font-style: italic; */
 }
 
+/* Sites List */
+#sites-list-container {
+  display: none;
+  overflow-y: scroll;
+  position: fixed;
+  top: 7.25rem;
+  left: 50%;
+  padding-left: 20px;
+  padding-right: 20px;
+  transform: translate(-50%);
+  padding-top: 0.75rem;
+  bottom: 0;
+}
+
+/* Narrow */
 @media screen {
   #action-bar {
     grid-template-columns: auto auto;
@@ -227,12 +252,13 @@ span.site-updated-time {
   #options {
     width: var(--site-width);
   }
-  #grid-sites {
+  #sites-grid {
     width: var(--site-width);
     grid-template-columns: var(--site-width);
   }
 }
 
+/* Normal */
 @media screen and (min-width: 50em) {
   #action-bar {
     grid-template-columns: 10rem auto 10rem;
@@ -245,27 +271,29 @@ span.site-updated-time {
   #options {
     width: calc((var(--site-width) * 2) + var(--site-column-gap));
   }
-  #grid-sites {
+  #sites-grid {
     width: calc((var(--site-width) * 2) + var(--site-column-gap));
     grid-template-columns: repeat(2, var(--site-width));
   }
 }
 
+/* Wide */
 @media screen and (min-width: 75em) {
   #options {
     width: calc((var(--site-width) * 3) + (var(--site-column-gap) * 2));
   }
-  #grid-sites {
+  #sites-grid {
     width: calc((var(--site-width) * 3) + (var(--site-column-gap) * 2));
     grid-template-columns: repeat(3, var(--site-width));
   }
 }
 
+/* Ultrawide */
 @media screen and (min-width: 100em) {
   #options {
     width: calc((var(--site-width) * 4) + (var(--site-column-gap) * 3));
   }
-  #grid-sites {
+  #sites-grid {
     width: calc((var(--site-width) * 4) + (var(--site-column-gap) * 3));
     grid-template-columns: repeat(4, var(--site-width));
   }
